.jekyll-cache/Jekyll/Cache/Jekyll--Converters--Markdown/2e/c953495f70f2fd8a0e518af406a30d83c59ecf3fab44089f5e7fb1fc36c2b8
I"u<p>/Users/cpm/Downloads/packages/php-5.4.45/ext/openssl/openssl.c:1433:15: error: incomplete definition of type ‘struct X509_extension_st’
        p = extension-&gt;value-&gt;data;
            ~~~~~~~~~^
/Users/cpm/Downloads/packages/php-5.4.45/ext/openssl/openssl.c:1434:20: error: incomplete definition of type ‘struct X509_extension_st’
        length = extension-&gt;value-&gt;length;
<!-- more -->
$ curl -O https://www.openssl.org/source/old/1.0.2/openssl-1.0.2u.tar.gz
$ tar xf openssl-1.0.2u.tar.gz
$ cd openssl-1.0.2u
$ ./Configure darwin64-x86_64-cc –prefix=/opt/openssl-1.0.2u
$ make
$ sudo make install</p>
:ET